--- a/src/Views/Shared/_LoginPartial.cshtml
+++ b/src/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,48 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<UserProfile> SignInManager
+@inject UserManager<UserProfile> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
+    
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity?.Name</a>
+        </li>
+        <li class="nav-item">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            </form>
+        </li>
+    
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+     <li class="nav-item">
+         <a class="btn btn-outline-secondary mb-3 btn-lg" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="btn btn-outline-primary btn-lg" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
+    @*<div class="container">
+        <div class="content-wrapper">
+            <div class="bg-light">
+                <div class="container-fluid pt-5">
+                    <div class="text-center">
+                        Connect with your new friends
+                    </div>
+                    <div class="text-center">
+                        <li>
+                            <a class="btn btn-outline-primary btn-lg" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                        </li>
+                        <li>
+                            <a class="btn btn-outline-secondary mb-3 btn-lg" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>*@
 }
 </ul>
+
