--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -14,5 +14,17 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+footer {
+    border-top: solid 1px;
+    background: rgba(150, 150, 150, 0.5);
+    width: 100%;
+    height: 40px;
+    padding-top: 10px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
 }
